update malling and audit cr eation form and database

--- a/src/locale/messages.en.xlf
+++ b/src/locale/messages.en.xlf
@@ -5243,5 +5243,293 @@ The goal is not to add features, but to choose the most relevant levers to gener
         <target>Cookie settings</target>
       </segment>
     </unit>
+      <unit id="auditHeroLabel">
+      <segment>
+        <source>Audit gratuit (24h)</source>
+        <target>Free audit (24h)</target>
+      </segment>
+    </unit>
+    <unit id="auditHeroTitle">
+      <segment>
+        <source>Audit de croissance en 15 points</source>
+        <target>15-point growth audit</target>
+      </segment>
+    </unit>
+    <unit id="auditHeroDescription">
+      <segment>
+        <source>Laissez votre site ou votre activité → recevez une courte vidéo personnalisée + un scorecard clair pour savoir quoi améliorer.</source>
+        <target>Leave your website or business → get a short personalized video + a clear scorecard to know what to fix.</target>
+      </segment>
+    </unit>
+    <unit id="auditHighlightsVideo">
+      <segment>
+        <source>Vidéo personnalisée (10 min)</source>
+        <target>Personalized video (10 min)</target>
+      </segment>
+    </unit>
+    <unit id="auditHighlightsScore">
+      <segment>
+        <source>Scorecard claire (15 points)</source>
+        <target>Clear scorecard (15 points)</target>
+      </segment>
+    </unit>
+    <unit id="auditHighlightsWins">
+      <segment>
+        <source>3 quick wins + 1 opportunité forte</source>
+        <target>3 quick wins + 1 high-impact opportunity</target>
+      </segment>
+    </unit>
+    <unit id="auditHighlightsNoObligation">
+      <segment>
+        <source>Aucun engagement</source>
+        <target>No obligation</target>
+      </segment>
+    </unit>
+    <unit id="auditStepOneTitle">
+      <segment>
+        <source>1. Vous laissez vos infos</source>
+        <target>1. You leave your details</target>
+      </segment>
+    </unit>
+    <unit id="auditStepOneDesc">
+      <segment>
+        <source>Nom du site + contact email ou téléphone.</source>
+        <target>Website name + email or phone contact.</target>
+      </segment>
+    </unit>
+    <unit id="auditStepTwoTitle">
+      <segment>
+        <source>2. Analyse rapide (30–45 min)</source>
+        <target>2. Fast analysis (30–45 min)</target>
+      </segment>
+    </unit>
+    <unit id="auditStepTwoDesc">
+      <segment>
+        <source>Je scanne votre site, votre SEO et votre conversion.</source>
+        <target>I scan your site, SEO, and conversion.</target>
+      </segment>
+    </unit>
+    <unit id="auditStepThreeTitle">
+      <segment>
+        <source>3. Livraison en 24h</source>
+        <target>3. Delivered in 24h</target>
+      </segment>
+    </unit>
+    <unit id="auditStepThreeDesc">
+      <segment>
+        <source>Vidéo + scorecard envoyées par email.</source>
+        <target>Video + scorecard sent by email.</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarConversionTitle">
+      <segment>
+        <source>Conversion &amp; clarté</source>
+        <target>Conversion &amp; clarity</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarConversionDesc">
+      <segment>
+        <source>Proposition de valeur, CTA, friction contact, mobile.</source>
+        <target>Value proposition, CTA, contact friction, mobile.</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarConversionTime">
+      <segment>
+        <source>5–7 min</source>
+        <target>5–7 min</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarPerformanceTitle">
+      <segment>
+        <source>Vitesse &amp; performance</source>
+        <target>Speed &amp; performance</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarPerformanceDesc">
+      <segment>
+        <source>PageSpeed, poids images, Core Web Vitals.</source>
+        <target>PageSpeed, image weight, Core Web Vitals.</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarPerformanceTime">
+      <segment>
+        <source>5–8 min</source>
+        <target>5–8 min</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarSeoTitle">
+      <segment>
+        <source>SEO fondations</source>
+        <target>SEO foundations</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarSeoDesc">
+      <segment>
+        <source>Titres, H1, meta, indexation, SEO local.</source>
+        <target>Titles, H1, meta, indexing, local SEO.</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarSeoTime">
+      <segment>
+        <source>7–10 min</source>
+        <target>7–10 min</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarTrustTitle">
+      <segment>
+        <source>Crédibilité &amp; confiance</source>
+        <target>Credibility &amp; trust</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarTrustDesc">
+      <segment>
+        <source>Preuves sociales, portfolio, signaux de confiance.</source>
+        <target>Social proof, portfolio, trust signals.</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarTrustTime">
+      <segment>
+        <source>5–7 min</source>
+        <target>5–7 min</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarTechTitle">
+      <segment>
+        <source>Tech &amp; scalabilité</source>
+        <target>Tech &amp; scalability</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarTechDesc">
+      <segment>
+        <source>CMS, sécurité, erreurs, maintenabilité.</source>
+        <target>CMS, security, errors, maintainability.</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarTechTime">
+      <segment>
+        <source>7–10 min</source>
+        <target>7–10 min</target>
+      </segment>
+    </unit>
+    <unit id="auditFormTitle">
+      <segment>
+        <source>Demander un audit gratuit</source>
+        <target>Request a free audit</target>
+      </segment>
+    </unit>
+    <unit id="auditFormDescription">
+      <segment>
+        <source>Je ne prends que 5 audits par semaine pour garantir une réponse rapide.</source>
+        <target>I only take 5 audits per week to guarantee a fast response.</target>
+      </segment>
+    </unit>
+    <unit id="auditFormWebsiteLabel">
+      <segment>
+        <source>Nom du site ou URL</source>
+        <target>Website name or URL</target>
+      </segment>
+    </unit>
+    <unit id="auditFormWebsitePlaceholder">
+      <segment>
+        <source>ex. https://votresite.fr</source>
+        <target>e.g. https://yoursite.com</target>
+      </segment>
+    </unit>
+    <unit id="auditFormContactMethodLabel">
+      <segment>
+        <source>Méthode de contact</source>
+        <target>Contact method</target>
+      </segment>
+    </unit>
+    <unit id="auditFormContactEmail">
+      <segment>
+        <source>Email</source>
+        <target>Email</target>
+      </segment>
+    </unit>
+    <unit id="auditFormContactPhone">
+      <segment>
+        <source>Téléphone</source>
+        <target>Phone</target>
+      </segment>
+    </unit>
+    <unit id="auditFormContactValueLabel">
+      <segment>
+        <source>Coordonnée</source>
+        <target>Contact detail</target>
+      </segment>
+    </unit>
+    <unit id="auditFormEmailPlaceholder">
+      <segment>
+        <source>ex. hello@votresite.fr</source>
+        <target>e.g. hello@yoursite.com</target>
+      </segment>
+    </unit>
+    <unit id="auditFormPhonePlaceholder">
+      <segment>
+        <source>ex. +33 6 98 50 32 82</source>
+        <target>e.g. +44 20 1234 5678</target>
+      </segment>
+    </unit>
+    <unit id="auditFormSubmit">
+      <segment>
+        <source>Recevoir mon audit</source>
+        <target>Get my audit</target>
+      </segment>
+    </unit>
+    <unit id="auditFormSuccess">
+      <segment>
+        <source>Merci ! Je reviens vers vous sous 24h avec votre audit.</source>
+        <target>Thanks! I’ll get back to you within 24h with your audit.</target>
+      </segment>
+    </unit>
+    <unit id="auditFormError">
+      <segment>
+        <source>Impossible d'envoyer la demande. Réessayez dans un instant.</source>
+        <target>Unable to send the request. Please try again in a moment.</target>
+      </segment>
+    </unit>
+    <unit id="auditHighlightsTitle">
+      <segment>
+        <source>Ce que vous recevez</source>
+        <target>What you get</target>
+      </segment>
+    </unit>
+    <unit id="auditStepsTitle">
+      <segment>
+        <source>Comment ça fonctionne</source>
+        <target>How it works</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarsTitle">
+      <segment>
+        <source>Audit rapide en 5 piliers</source>
+        <target>Fast audit in 5 pillars</target>
+      </segment>
+    </unit>
+    <unit id="auditPillarsSubtitle">
+      <segment>
+        <source>Un diagnostic concret, actionnable et faisable en moins de 45 minutes.</source>
+        <target>A concrete, actionable diagnosis delivered in under 45 minutes.</target>
+      </segment>
+    </unit>
+    <unit id="auditAsideTitle">
+      <segment>
+        <source>Pourquoi c'est utile</source>
+        <target>Why it’s useful</target>
+      </segment>
+    </unit>
+    <unit id="auditAsideBody">
+      <segment>
+        <source>Je vous montre exactement pourquoi votre site ne transforme pas vos visiteurs en clients — et ce qu'il faut corriger en moins d'une semaine.</source>
+        <target>I show you exactly why your site isn’t turning visitors into clients — and what to fix in under a week.</target>
+      </segment>
+    </unit>
+    <unit id="auditAsideLimit">
+      <segment>
+        <source>Disponibilités limitées : 5 audits par semaine.</source>
+        <target>Limited availability: 5 audits per week.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
