--- a/src/locale/messages.en.xlf
+++ b/src/locale/messages.en.xlf
@@ -259,11 +259,13 @@
       <notes>
         <note category="location">src/app/features/auth/auth.component.html:97,99</note>
         <note category="location">src/app/features/auth/auth.component.html:178,180</note>
-        <note category="location">src/app/features/contact/contact.component.html:37,38</note>
-        <note category="location">src/app/features/contact/contact.component.html:67,70</note>
-        <note category="location">src/app/features/contact/contact.component.html:96,100</note>
-        <note category="location">src/app/features/contact/contact.component.html:117,121</note>
-        <note category="location">src/app/features/contact/contact.component.html:127,131</note>
+        <note category="location">src/app/features/contact/contact.component.html:36,37</note>
+        <note category="location">src/app/features/contact/contact.component.html:74,79</note>
+        <note category="location">src/app/features/contact/contact.component.html:104,108</note>
+        <note category="location">src/app/features/contact/contact.component.html:126,131</note>
+        <note category="location">src/app/features/contact/contact.component.html:138,142</note>
+        <note category="location">src/app/features/growth-audit/growth-audit.component.html:22,26</note>
+        <note category="location">src/app/features/growth-audit/growth-audit.component.html:82,83</note>
         <note category="description">Required field error</note>
         <note category="meaning">auth.error.required</note>
       </notes>
@@ -278,6 +280,7 @@
         <note category="location">src/app/features/auth/auth.component.html:100,102</note>
         <note category="location">src/app/features/auth/auth.component.html:181,184</note>
         <note category="location">src/app/features/contact/contact.component.html:39,41</note>
+        <note category="location">src/app/features/growth-audit/growth-audit.component.html:84,86</note>
         <note category="description">Invalid email error</note>
         <note category="meaning">auth.error.email</note>
       </notes>
@@ -304,6 +307,7 @@
         <note category="location">src/app/features/auth/auth.component.html:106,110</note>
         <note category="location">src/app/features/auth/auth.component.html:184,188</note>
         <note category="location">src/app/features/contact/contact.component.html:41,44</note>
+        <note category="location">src/app/features/growth-audit/growth-audit.component.html:90,93</note>
         <note category="description">Generic validation error</note>
         <note category="meaning">auth.error.generic</note>
       </notes>
@@ -1660,6 +1664,18 @@ The application is organized around three complementary modules, each tailored t
       </segment>
     </unit>
 
+<unit id="contactFormRoleCTO">
+  <notes>
+    <note category="location">src/app/features/contact/contact.component.ts:52</note>
+    <note category="description">contact.form.role.cto</note>
+  </notes>
+  <segment>
+    <source>CTO</source>
+    <target>CTO</target>
+  </segment>
+</unit>
+
+
     <unit id="contactFormRoleStudent">
       <notes>
         <note category="location">src/app/features/contact/contact.component.ts:53</note>
@@ -1803,6 +1819,193 @@ The application is organized around three complementary modules, each tailored t
         <target>An error occurred. Please try again later.</target>
       </segment>
     </unit>
+
+
+<unit id="authErrorPhone">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.html:87,90</note>
+    <note category="description">auth.error.phone</note>
+  </notes>
+  <segment>
+    <source>Merci d’entrer un numéro de téléphone valide.</source>
+    <target>Please enter a valid phone number.</target>
+  </segment>
+</unit>
+
+<unit id="auditPillarsTitle">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.html:116,117</note>
+  </notes>
+  <segment>
+    <source>Audit rapide en 5 piliers</source>
+    <target>5-Pillar Rapid Audit</target>
+  </segment>
+</unit>
+
+<unit id="auditPillarsSubtitle">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.html:118,120</note>
+  </notes>
+  <segment>
+    <source> Un diagnostic concret, actionnable et faisable en moins de 45 minutes. </source>
+    <target>A practical, actionable diagnosis completed in under 45 minutes.</target>
+  </segment>
+</unit>
+
+<unit id="auditStepsTitle">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.html:130,131</note>
+  </notes>
+  <segment>
+    <source>Comment ça fonctionne</source>
+    <target>How it works</target>
+  </segment>
+</unit>
+
+<unit id="auditHeroLabel">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.ts:33</note>
+    <note category="description">audit.hero.label</note>
+  </notes>
+  <segment>
+    <source>Audit gratuit (24h)</source>
+    <target>Free Audit (24h turnaround)</target>
+  </segment>
+</unit>
+
+<unit id="auditHeroTitle">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.ts:34</note>
+    <note category="description">audit.hero.title</note>
+  </notes>
+  <segment>
+    <source>Audit de croissance en 15 points</source>
+    <target>15-Point Growth Audit</target>
+  </segment>
+</unit>
+
+<unit id="auditHeroDescription">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.ts:35</note>
+    <note category="description">audit.hero.description</note>
+  </notes>
+  <segment>
+    <source>Laissez votre site ou le nom de votre entreprise, et recevez une analyse personnalisée comprenant une video et un scorecard clair avec des recommandations concrètes pour booster votre croissance en ligne.</source>
+    <target>Leave your website URL or business name and receive a personalized analysis including a short video and a clear scorecard with practical recommendations to boost your online growth.</target>
+  </segment>
+</unit>
+
+<unit id="auditStepOneTitle">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.ts:40</note>
+    <note category="description">audit.steps.one.title</note>
+  </notes>
+  <segment>
+    <source>1. Vous laissez vos infos</source>
+    <target>1. Submit your details</target>
+  </segment>
+</unit>
+
+<unit id="auditStepOneDesc">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.ts:41</note>
+    <note category="description">audit.steps.one.desc</note>
+  </notes>
+  <segment>
+    <source>Nom du site + contact email ou téléphone.</source>
+    <target>Your website name + email or phone number.</target>
+  </segment>
+</unit>
+
+<unit id="auditStepTwoTitle">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.ts:44</note>
+    <note category="description">audit.steps.two.title</note>
+  </notes>
+  <segment>
+    <source>2. Analyse rapide de votre site</source>
+    <target>2. Quick website analysis</target>
+  </segment>
+</unit>
+
+<unit id="auditStepTwoDesc">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.ts:45</note>
+    <note category="description">audit.steps.two.desc</note>
+  </notes>
+  <segment>
+    <source>Je scanne votre site, votre SEO et votre conversion.</source>
+    <target>I review your website, SEO performance, and conversion flow.</target>
+  </segment>
+</unit>
+
+<unit id="auditStepThreeTitle">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.ts:48</note>
+    <note category="description">audit.steps.three.title</note>
+  </notes>
+  <segment>
+    <source>3. Livraison en 24h</source>
+    <target>3. Delivered within 24 hours</target>
+  </segment>
+</unit>
+
+<unit id="auditStepThreeDesc">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.ts:49</note>
+    <note category="description">audit.steps.three.desc</note>
+  </notes>
+  <segment>
+    <source>Vidéo + scorecard envoyées par email.</source>
+    <target>Video + scorecard sent directly to your inbox.</target>
+  </segment>
+</unit>
+
+<unit id="auditHighlightsVideo">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.ts:51</note>
+    <note category="description">audit.highlights.video</note>
+  </notes>
+  <segment>
+    <source>Vidéo personnalisée (10 min)</source>
+    <target>Personalized 10-minute video</target>
+  </segment>
+</unit>
+
+<unit id="auditHighlightsScore">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.ts:52</note>
+    <note category="description">audit.highlights.score</note>
+  </notes>
+  <segment>
+    <source>Scorecard claire (15 points)</source>
+    <target>Clear 15-point scorecard</target>
+  </segment>
+</unit>
+
+<unit id="auditHighlightsWins">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.ts:53</note>
+    <note category="description">audit.highlights.wins</note>
+  </notes>
+  <segment>
+    <source>3 quick wins + 1 opportunité forte</source>
+    <target>3 quick wins + 1 high-impact opportunity</target>
+  </segment>
+</unit>
+
+<unit id="auditHighlightsNoObligation">
+  <notes>
+    <note category="location">src/app/features/growth-audit/growth-audit.component.ts:54</note>
+    <note category="description">audit.highlights.noObligation</note>
+  </notes>
+  <segment>
+    <source>Aucun engagement</source>
+    <target>No obligation</target>
+  </segment>
+</unit>
+
+
 
     <unit id="ctaTitle">
       <notes>
@@ -2364,6 +2567,7 @@ The application is organized around three complementary modules, each tailored t
     <target>Test icon</target>
   </segment>
 </unit>
+
     <unit id="servicesCtaContact">
       <notes>
         <note category="location">src/app/features/home/home.component.ts:57</note>
@@ -4380,17 +4584,42 @@ The goal is not to add features, but to choose the most relevant levers to gener
       </segment>
     </unit>
 
-    <unit id="navLinkOfferSpan:Offres">
-      <notes>
-        <note category="location">src/app/shared/components/navbar/navbar.component.html:123,127</note>
-        <note category="description">Navbar primary link</note>
-        <note category="meaning">navbar.link.offer</note>
-      </notes>
-      <segment>
-        <source>Offres</source>
-        <target>Offers</target>
-      </segment>
-    </unit>
+<unit id="navLinkOfferSpan">
+  <notes>
+    <note category="location">src/app/shared/components/navbar/navbar.component.ts:33</note>
+    <note category="description">Navbar primary link</note>
+    <note category="meaning">navbar.link.offer</note>
+  </notes>
+  <segment>
+    <source>Offres</source>
+    <target>Services</target>
+  </segment>
+</unit>
+
+<unit id="navLinkAudit:Audit">
+  <notes>
+    <note category="location">src/app/shared/components/navbar/navbar.component.html:120</note>
+    <note category="description">Navbar primary link</note>
+    <note category="meaning">navbar.link.audit</note>
+  </notes>
+  <segment>
+    <source>Demander un devis</source>
+    <target>Request a Quote</target>
+  </segment>
+</unit>
+
+<unit id="navLinkAuditSpan:Audit">
+  <notes>
+    <note category="location">src/app/shared/components/navbar/navbar.component.html:122,126</note>
+    <note category="description">Navbar primary link</note>
+    <note category="meaning">navbar.link.audit</note>
+  </notes>
+  <segment>
+    <source>Audit</source>
+    <target>Audit</target>
+  </segment>
+</unit>
+
 
     <unit id="navCtaContactTitle">
       <notes>
